# stock_profiler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/agents/: launch-code.md  launch-data.md  launch-infra.md  launch-writing.md
deploy/: Caddyfile  install.sh
deploy/scripts/: run-backup.sh  run-incremental.sh
deploy/systemd/: secfin-backup.service  secfin-backup.timer  secfin-incremental.service  secfin-incremental.timer
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  DEPLOYMENT_BLOCK_STORAGE.md  DEPLOYMENT_DO.md  DEVELOPMENT.md  REDESIGN_SECTOR_APP.md  REDESIGN_SECTOR_OVERVIEW.md  ROADMAP.md  ROADMAP_13F_ANALYTICS.md  ROADMAP_DATA_DEPTH.md  ROADMAP_METRICS.md  ROADMAP_SECTOR_ANALYTICS.md  ROADMAP_SECTOR_APP_V2.md  ROADMAP_SECTOR_MIGRATION.md  ROADMAP_UI.md  SPIKE_DIMENSIONAL.md  STYLE_GUIDE.md  tag_glossary.jsonl
scripts/: benchmark_screening.py  headless_check.js  load_test_cache_path.py  load_test_cold_path.py  repair_null_fiscal_metadata.py  seed_analytical_fixture.py  seed_fixture.py  seed_infographic_fixture.py  spike_dimensional_extract.py  tag_glossary.py  verify_deployment.py
tests/: test_activity_series.py  test_admin_ops.py  test_admin_routes.py  test_api_key_repository.py  test_app_auth_wiring.py  test_auth.py  test_auth_routes.py  test_backfill.py  test_backup_restore.py  test_balance_viz.py  test_beneficial_ownership_repository.py  test_bulk_parity.py  test_cashflow_viz.py  test_cik_resolution.py  test_coholding.py  test_cusip.py  test_cusip_repository.py  test_daily_index.py  test_downloader.py  test_flows.py  test_frames.py  test_frames_backfill.py  test_geography.py  test_holdings_repository.py  test_income_viz.py  test_insider.py  test_insider_backfill.py  test_insider_repository.py  test_institutional.py  test_institutional_backfill.py  test_institutional_periods_routes.py  test_institutional_viz_routes.py  test_location_backfill.py  test_manager_routes.py  test_mapping.py  test_metric_history.py  test_metrics.py  test_normalized_view.py  test_peer_distribution.py  test_peer_distribution_routes.py  (+21 more)
(+299 files in other folders)
