[project]
name = "sec-financials-api"
version = "0.1.0"
description = "Normalized SEC financial data (Track 1: structured numeric data) as a JSON API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Milestone 2.5 batch/analytical jobs ONLY (13F cross-manager inversion, later
# cross-company screening) -- never a runtime dependency of the live API. Pinned
# exactly, not a range: see docs/ARCHITECTURE.md 3b for the benchmark + concurrency
# verification this version was chosen against ("verify, don't assume" -- CLAUDE.md).
# 1.4.x is DuckDB's LTS line; picked over the newer 1.5.x for a batch job that should
# need the least maintenance attention.
analytical = [
    "duckdb==1.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secfin"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
